# integritykit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ANALYTICS_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run_tests.sh  test_prompts_registry.py
.github/workflows/: ci.yml
demo/: .env.demo  run_all.sh  run_facilitator_demo.py  simulate_scenario.py  test_demo_scenario.py
docs/: Aid_Arena_Integrity_Kit_CDD_Ambient_v0_4.md  Aid_Arena_Integrity_Kit_SDP_Sprint8_v1_0.md  Aid_Arena_Integrity_Kit_SDP_v0_4.md  Aid_Arena_Integrity_Kit_SRS_Ambient_v0_4.md  INTEGRATION_API_DESIGN_SUMMARY.md  S8-4_IMPLEMENTATION_SUMMARY.md  S8-4_QUICK_REFERENCE.md  S8-4_multilang_implementation.md  analytics-api-summary.md  analytics-guide.md  analytics.md  analytics_api_examples.md  analytics_indexes.md  api_guide.md  architecture.md  deployment-runbook-v1.0.md  evaluation-framework.md  exercise-in-a-box.md  external-integrations-guide.md  external-integrations.md  facilitator-guide.md  integration-architecture-v1.0.md  integration-quick-reference.md  migration.md  mongodb_schema.md  multi-language-guide.md  multi-language.md  openapi-integrations.yaml  openapi.yaml  prompts.md  security-review-v1.0.md  software-development-plan.md  webhooks-guide.md
docs/archive/: implementation-notes.md
examples/: cap_export_sample.xml  geojson_export_example.md
scripts/: create_analytics_indexes.sh
src/integritykit/: __init__.py  config.py
tests/: README.md  conftest.py  factories.py
tests/e2e/: __init__.py  test_integrations_e2e.py  test_multilang_e2e.py
tests/integration/: test_api_auth.py  test_api_backlog.py  test_api_search.py  test_clustering_pipeline.py  test_cop_candidate.py  test_cop_draft_pipeline.py  test_hardening_workflows.py  test_integrations.py  test_metrics_pipeline.py  test_publish_pipeline.py  test_signal_pipeline.py
tests/performance/: README.md  __init__.py  test_performance.py
tests/unit/: test_abuse_detection.py  test_access_control.py  test_ai_metadata.py  test_analytics.py  test_api_routes.py  test_audit.py  test_backlog.py  test_candidate_merge.py  test_cap_export.py  test_clustering.py  test_conflict_detection.py  test_cop_candidate.py  test_data_retention.py  test_delta_summary.py  test_draft.py  test_draft_multilang.py  test_duplicate_detection.py  test_edxl_export.py  test_embedding.py  test_external_sources.py  test_geojson_export.py  test_llm_cache.py  (+17 more)
(+100 files in other folders)
