[project]
name = "integritykit"
version = "0.4.0"
description = "Aid Arena Integrity Kit - Slack coordination layer for crisis-response COP updates"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Aid Arena", email = "team@aidarena.org"}
]
keywords = ["slack", "crisis-response", "coordination", "cop", "situational-awareness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "chromadb>=0.4.22",
    "openai>=1.10.0",
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.26.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mongomock>=4.1.0",
    "mongomock-motor>=0.0.21",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/aidarena/integritykit"
Documentation = "https://github.com/aidarena/integritykit#readme"
Repository = "https://github.com/aidarena/integritykit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/integritykit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (isolated, fast)",
    "integration: Integration tests (database, external services)",
    "slow: Slow-running tests",
    "requires_mongodb: Tests requiring MongoDB",
    "requires_chromadb: Tests requiring ChromaDB",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["motor.*", "chromadb.*", "slack_bolt.*", "slack_sdk.*"]
ignore_missing_imports = true
